# EDPredictiveEfficiency

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
data/features/: feature_indices_WAITTIME.csv  features_WAITTIME.csv  top_features_WAITTIME.csv
data/processed/: X_test_preprocessed_regression_WAITTIME.csv  X_train_preprocessed_regression_WAITTIME.csv  X_validation_preprocessed_regression_WAITTIME.csv
data/raw/: nhamcs14.sas7bdat
data/test/: X_test_regression_WAITTIME.csv  X_test_selected_features_WAITTIME.csv  test_df_regression_WAITTIME.csv  y_test_regression_WAITTIME.csv
data/train/: X_train_regression_WAITTIME.csv  X_train_selected_features_WAITTIME.csv  train_df_regression_WAITTIME.csv  y_train_regression_WAITTIME.csv
data/validation/: X_validation_regression_WAITTIME.csv  X_validation_selected_features_WAITTIME.csv  valid_df_regression_WAITTIME.csv  y_validation_regression_WAITTIME.csv
docs/: README.md  project_overview.md  setup_guide.md
documentation/: project_overview.md
models/: best_classification_model.joblib  best_waittime_classification_model_tuned.joblib  best_waittime_classification_model_with_all_features.joblib  best_waittime_regression_model.joblib  best_waittime_regression_model_with_all_features.joblib  best_waittime_regression_model_with_top_features.joblib  data_processor.joblib
notebooks/: Untitled-1.ipynb  best_waittime_regression_model.joblib  lov_classification_modelling.ipynb  lov_regression_modeling.ipynb  unsupervised.ipynb  waittime_classification_modeling.ipynb  waittime_regression_modeling.ipynb
(+42 files in other folders)
