[tool.poetry]
name = "edpredictiveefficiency"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
catboost = "^1.2.3"
imbalanced-learn = "^0.12.2"
joblib = "^1.4.0"
lightgbm = "^4.3.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
seaborn = "^0.13.2"
shap = "^0.45.0"
umap-learn = "^0.5.6"
xgboost = "^2.0.3"
ipywidgets = "^7.6"
jupyter = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
